@@ -14,6 +14,7 @@ export(ego)
 export(get_edge_gpar)
 export(get_gpar)
 export(get_vertex_gpar)
+export(locate_vertex)
 export(make_colors)
 export(make_edges_colors)
 export(make_vertex_colors)
