@@ -43,8 +43,7 @@ nplot(x, ..., edgelist)
   vertex.nsides = 10,
   vertex.color = grDevices::hcl.colors(1),
   vertex.size.range = c(0.01, 0.03),
-  vertex.frame.color = grDevices::adjustcolor(vertex.color, red.f = 0.75, green.f = 0.75,
-    blue.f = 0.75),
+  vertex.frame.color = NULL,
   vertex.rot = 0,
   vertex.frame.prop = 0.2,
   vertex.label = NULL,
