@@ -11,6 +11,11 @@ netplot 0.2-0
 
 -   The argument sample.edges now works as expected.
 
+-   vertex.color now accepts formulas to color vertices by a vertex
+    attribute.
+
+-   New function: locate_vertex().
+
 netplot 0.1-0
 
 -   First CRAN release.
